metadata/force-app/main/default/objects/Lead/fields/Percent_test__c.field-meta.xml
<CustomField>
    <fullName>Percent_test__c</fullName>
    <label>Percent test</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>