metadata/force-app/main/default/objects/Lead/fields/Time_to_test__c.field-meta.xml
<CustomField>
    <fullName>Time_to_test__c</fullName>
    <label>Time to test</label>
    <type>Time</type>
</CustomField>